objects/NPS_Survey__c.object
<CustomObject>
    <description>This is the Survey form to track the Net Promoter Score</description>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <inlineHelpText>Person who has been asked to contact the customer re their feedback given.</inlineHelpText>
        <label>Action Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adam Duncan</fullName>
                </value>
                <value>
                    <fullName>Bernd Fabian</fullName>
                </value>
                <value>
                    <fullName>Ian Skinner</fullName>
                </value>
                <value>
                    <fullName>Manfred Hagelmueller</fullName>
                </value>
                <value>
                    <fullName>Marc Benoit</fullName>
                </value>
                <value>
                    <fullName>Mikhail Shelkov</fullName>
                </value>
                <value>
                    <fullName>Pascal Sequin</fullName>
                </value>
                <value>
                    <fullName>PK Ramakrishnan</fullName>
                </value>
                <value>
                    <fullName>Rene Wehlauch</fullName>
                </value>
                <value>
                    <fullName>Ronnie Fotheringham</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPS Surveys</relationshipLabel>
        <relationshipName>NPS_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_status__c</fullName>
        <label>Completion status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPS Surveys</relationshipLabel>
        <relationshipName>NPS_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type A</fullName>
                </value>
                <value>
                    <fullName>Type B</fullName>
                </value>
                <value>
                    <fullName>Type C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_month__c</fullName>
        <inlineHelpText>Month the survey was issued.</inlineHelpText>
        <label>Cycle (month)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan/Jul</fullName>
                </value>
                <value>
                    <fullName>Feb/Aug</fullName>
                </value>
                <value>
                    <fullName>Mar/Sep</fullName>
                </value>
                <value>
                    <fullName>Apr/Oct</fullName>
                </value>
                <value>
                    <fullName>May/Nov</fullName>
                </value>
                <value>
                    <fullName>Jun/Dec</fullName>
                </value>
                <value>
                    <fullName>Jul/Jan</fullName>
                </value>
                <value>
                    <fullName>Aug/Feb</fullName>
                </value>
                <value>
                    <fullName>Sep/Mar</fullName>
                </value>
                <value>
                    <fullName>Oct/Apr</fullName>
                </value>
                <value>
                    <fullName>Nov/May</fullName>
                </value>
                <value>
                    <fullName>Dec/Jun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <label>Follow Up</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Category__c</fullName>
        <label>Function Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category A</fullName>
                </value>
                <value>
                    <fullName>Category B</fullName>
                </value>
                <value>
                    <fullName>Category C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_End__c</fullName>
        <label>Interview End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Start__c</fullName>
        <label>Interview Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_feedback_actions__c</fullName>
        <label>NPS feedback/actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <defaultValue>&quot;How satisfied are you with TE&apos;s delivery performance? Extremely satisfied NOT at all Satisfied.&quot;</defaultValue>
        <label>Question 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_13__c</fullName>
        <defaultValue>&quot;How satisfied are you with TE&apos;s product quality? Extremely satisfied NOT at all Satisfied&quot;</defaultValue>
        <label>Question 13</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_14T__c</fullName>
        <defaultValue>&quot;Please share any comments you have relating to TE&apos;s operations.&quot;</defaultValue>
        <label>Question 14T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_14__c</fullName>
        <defaultValue>&quot;How satisfied you are with the quality of TE&apos;s responsiveness in handling quality complaints? Extremely satisfied NOT at all Satisfied&quot;</defaultValue>
        <label>Question 14</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_15T__c</fullName>
        <defaultValue>&quot;Please provide below any comments or recommendations you have for TE.&quot;</defaultValue>
        <label>Question 15T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_5T__c</fullName>
        <defaultValue>&quot;Please share any comments you have relating to TE&apos;s technology&quot;</defaultValue>
        <label>Question 5T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NAM</fullName>
                </value>
                <value>
                    <fullName>LAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replayed__c</fullName>
        <label>Replayed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reply_10__c</fullName>
        <label>Reply 10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reply_13__c</fullName>
        <label>Reply 13</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reply_14T__c</fullName>
        <label>Reply 14T</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_14__c</fullName>
        <label>Reply 14</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reply_15T__c</fullName>
        <label>Reply 15T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reply_5T__c</fullName>
        <label>Reply 5T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_ID__c</fullName>
        <label>Response ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Cycle_1__c</fullName>
        <inlineHelpText>Score from surveys.</inlineHelpText>
        <label>Score Cycle 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score_Cycle_2__c</fullName>
        <inlineHelpText>Score from second survey.</inlineHelpText>
        <label>Score Cycle 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>DNR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Year__c</fullName>
        <label>Survey Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_duration_seconds__c</fullName>
        <label>Survey duration (seconds)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_party_unique_identifier__c</fullName>
        <label>Third party unique identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>TEXT(Score_Cycle_1__c) + TEXT(Score_Cycle_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <type>Text</type>
    </fields>
    <label>NPS Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Company_Name__c</columns>
        <columns>NAME</columns>
        <columns>Action_Owner__c</columns>
        <columns>Completion_status__c</columns>
        <columns>Cycle_month__c</columns>
        <columns>Follow_Up__c</columns>
        <columns>NPS_feedback_actions__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NPS_AMR</fullName>
        <columns>NAME</columns>
        <columns>Score_Cycle_1__c</columns>
        <columns>Reply_1__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Contact_Person_Name__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Interview_Start__c</columns>
        <columns>Survey_Year__c</columns>
        <columns>NPS_feedback_actions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>NAM</value>
        </filters>
        <label>NPS - AMR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NPS_AUS</fullName>
        <columns>Action_Owner__c</columns>
        <columns>Cycle_month__c</columns>
        <columns>Customer_Type__c</columns>
        <columns>Score_Cycle_1__c</columns>
        <columns>Score_Cycle_2__c</columns>
        <columns>Response_ID__c</columns>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Contact_Person_Name__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>NPS_feedback_actions__c</columns>
        <columns>Interview_Start__c</columns>
        <columns>Interview_End__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AUS</value>
        </filters>
        <label>NPS - AUS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NPS_EMEA_2014</fullName>
        <columns>Completion_status__c</columns>
        <columns>NPS_feedback_actions__c</columns>
        <columns>Action_Owner__c</columns>
        <columns>Cycle_month__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Contact_Person_Name__c</columns>
        <columns>Score_Cycle_1__c</columns>
        <columns>Score_Cycle_2__c</columns>
        <columns>Reply_1__c</columns>
        <columns>Response_ID__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Email__c</columns>
        <columns>Interview_Start__c</columns>
        <columns>Interview_End__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interview_Start__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <filters>
            <field>Cycle_month__c</field>
            <operation>equals</operation>
            <value>Jul/Jan</value>
        </filters>
        <filters>
            <field>Score_Cycle_2__c</field>
            <operation>equals</operation>
            <value>Detractor,Passive,Promoter,DNR</value>
        </filters>
        <label>NPS - EMEA 2014</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NPS - {00000}</displayFormat>
        <label>NPS Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>